# Abandoned

./: .gitignore  README.md  car_config.txt  vofa+.cmds.json  vofa+.tabviews.json  vofa_adjust_ui.cmds.json
.doc/: API接口文档.md  视觉巡线决策系统详解.md  项目总览文档.md
libraries/zf_common/: zf_common_headfile.hpp
libraries/zf_device/: zf_device_ips200_fb.cpp  zf_device_ips200_fb.hpp  zf_device_uvc.hpp
model_lq/model_1/: best_model.pt  labels.txt  metrics.json  random_sample_metrics.json  tiny_classifier_fp32.ncnn.param  tiny_classifier_fp32.onnx  tiny_classifier_fp32.onnx.data
model_zf/: my_model.cpp  my_model.h5  my_model.hpp  本文件夹作用.txt
model_zf/model_1/: my_model.cpp  my_model.hpp  my_model.tflite
model_zf/model_2/: best_model.cpp  best_model.hpp  loong_cnn_model_simple_ep200.h5  loong_cnn_model_simple_ep200.tflite  metrics.json
model_zf/model_3/: best_model_2.cpp  best_model_2.hpp  loong_cnn_model_simple_ep205.h5  loong_cnn_model_simple_ep205.tflite  metrics.json
model_zf/model_4/: best_model_3.cpp  best_model_3.hpp  loong_cnn_model_simple_ep395.h5  loong_cnn_model_simple_ep395.tflite  metrics.json
project/code/: IMU963R.cpp  IMU963R.hpp  MadgwickAHRS.cpp  MadgwickAHRS.hpp  akima.cpp  akima.hpp  config_seting.hpp  config_setting.cpp  decision.cpp  decision.hpp  imgproc.cpp  imgproc.hpp  motor.cpp  motor.hpp  my_global.cpp  my_global.hpp  my_image_transmitter.cpp  my_image_transmitter.hpp  my_key.cpp  my_key.hpp  my_menu.cpp  my_menu.hpp  my_pid.cpp  my_pid.hpp  my_task_function.cpp  my_task_function.hpp  my_timestamp.cpp  my_timestamp.hpp  navigation.cpp  navigation.hpp  red_rect.cpp  red_rect.hpp  tflm_model_process.cpp  tflm_model_process.hpp  tflm_model_process_lq.cpp  tflm_model_process_lq.hpp  udp_sender.cpp  udp_sender.hpp
project/user/: CMakeLists.txt  build.sh  build_test.sh  main.cpp  readme  使用指南.md
